# fourplayerchess

./: .gitignore  Cargo.toml  README.md  TODO.md  engine.js  index.html  review.js  rules.js  style.css  ui.js
.cargo/: config.toml
bench/: MOVEGEN-VECTORIZATION.md  README.md  bench.c  bench.js  bench.py  bench.rs  bench_np.py  engine.c  engine_throughput.mjs  main.go  run.sh
bench/goengine/: main.go
comms/: chat.md  to-backend.md  to-frontend.md
crates/fpc-agents/: Cargo.toml
crates/fpc-agents/src/: lib.rs
crates/fpc-arena/: Cargo.toml
crates/fpc-arena/src/: main.rs
crates/fpc-core/: Cargo.toml
crates/fpc-core/src/: features.rs  lib.rs  movegen.rs  state.rs  types.rs
crates/fpc-core/tests/: diff.rs
crates/fpc-train/: Cargo.toml
crates/fpc-train/src/: main.rs
crates/fpc-wasm/: Cargo.toml
crates/fpc-wasm/src/: lib.rs
experiments/: LOG.md
pkg/: fpc_wasm.d.ts  fpc_wasm.js  fpc_wasm_bg.wasm  fpc_wasm_bg.wasm.d.ts
tools/: build-wasm.sh  oracle.mjs  review-smoke.mjs  watch-run.sh
