[package]
name = "fpc-wasm"
edition.workspace = true
version.workspace = true

[lib]
# cdylib for the wasm build; rlib so the same logic is unit-testable natively.
crate-type = ["cdylib", "rlib"]

[dependencies]
fpc-core = { path = "../fpc-core" }
fpc-agents = { path = "../fpc-agents" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
